sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:7: error: illegal start of simple expression
      if (plusPetit(i,i+1) == false)) {
                                    ^